rgw: cls: ceph::timespan tag_timeout wrong units

In rgw_dir_suggest(), the ceph::timespan tag_timeout is intended
to be a value in seconds, but has been taken as something much
smaller (millis?).  The incorrect time scale likely induces a race
condition with object deletes.

Fixes: http://tracker.ceph.com/issues/20380

Signed-off-by: Matt Benjamin <mbenjamin@redhat.com>
(cherry picked from commit e6763ebd6124c1b4736c5c7850077df7644bc8f5)